--- a/inst/AUTHORS
+++ b/inst/AUTHORS
@@ -2,7 +2,7 @@ The files
   inst/include/integration/GaussKronrodNodesWeights.h
   inst/include/integration/Integrator.h
 were modified from library NumericalIntegration
-(https://github.com/tbs1980/NumericalIntegration)
+(https://github.com/tbs1980/NumericalIntegration, MPL-2)
 written by Sreekumar T. Balan, Matt Beall, and Mark Sauder.
 
 The files
@@ -10,7 +10,15 @@ The files
   src/arithmetic_ansi.h
   src/lbfgs.c
 were copied from the libLBFGS library
-(http://www.chokkan.org/software/liblbfgs/)
+(http://www.chokkan.org/software/liblbfgs/, MIT)
 written by Naoaki Okazaki.
+
+The files
+  inst/include/integration/cuba.h
+  src/Cuhre.c
+  src/cuhre/*
+were modified from the Cuba library
+(http://www.feynarts.de/cuba/, LGPL-3)
+written by Thomas Hahn.
 
 Other part of this package was written by Yixuan Qiu.
