--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -4,7 +4,7 @@ author: "Yixuan Qiu"
 date: "`r Sys.Date()`"
 output:
   prettydoc::html_pretty:
-    theme: cayman
+    theme: architect
     highlight: github
     toc: true
 vignette: >
@@ -12,6 +12,13 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+```{r setup, include=FALSE}
+library(Rcpp)
+library(RcppNumerical)
+knitr::opts_chunk$set(message = FALSE, warning = FALSE,
+                      comment = "#", collapse = TRUE)
+```
 
 ## Introduction
 
@@ -134,19 +141,53 @@ Rcpp::List integrate_test()
 
 Runing the `integrate_test()` function in R gives
 
-```r
+```{r include=FALSE}
+includes = '
+#include <RcppNumerical.h>
+using namespace Numer;
+
+// P(0.3 < X < 0.8), X ~ Beta(a, b)
+class BetaPDF: public Func
+{
+private:
+    double a;
+    double b;
+public:
+    BetaPDF(double a_, double b_) : a(a_), b(b_) {}
+
+    double operator()(const double& x) const
+    {
+        return R::dbeta(x, a, b, 0);
+    }
+};
+'
+code = '
+Rcpp::List integrate_test()
+{
+    const double a = 3, b = 10;
+    const double lower = 0.3, upper = 0.8;
+    const double true_val = R::pbeta(upper, a, b, 1, 0) -
+                            R::pbeta(lower, a, b, 1, 0);
+
+    BetaPDF f(a, b);
+    double err_est;
+    int err_code;
+    const double res = integrate(f, lower, upper, err_est, err_code);
+    return Rcpp::List::create(
+        Rcpp::Named("true") = true_val,
+        Rcpp::Named("approximate") = res,
+        Rcpp::Named("error_estimate") = err_est,
+        Rcpp::Named("error_code") = err_code
+    );
+}
+'
+cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
+            showOutput = FALSE, verbose = FALSE)
+```
+
+
+```{r}
 integrate_test()
-## $true
-## [1] 0.2528108
-##
-## $approximate
-## [1] 0.2528108
-##
-## $error_estimate
-## [1] 2.806764e-15
-##
-## $error_code
-## [1] 0
 ```
 
 ### Multi-dimensional
@@ -251,20 +292,61 @@ Rcpp::List integrate_test2()
 
 We can test the result in R:
 
-```r
+```{r include=FALSE}
+includes = '
+#include <RcppNumerical.h>
+using namespace Numer;
+
+// P(a1 < X1 < b1, a2 < X2 < b2), (X1, X2) ~ N([0], [1   rho])
+//                                            ([0], [rho   1])
+class BiNormal: public MFunc
+{
+private:
+    const double rho;
+    double const1;  // 2 * (1 - rho^2)
+    double const2;  // 1 / (2 * PI) / sqrt(1 - rho^2)
+public:
+    BiNormal(const double& rho_) : rho(rho_)
+    {
+        const1 = 2.0 * (1.0 - rho * rho);
+        const2 = 1.0 / (2 * M_PI) / std::sqrt(1.0 - rho * rho);
+    }
+
+    // PDF of bivariate normal
+    double operator()(Constvec& x)
+    {
+        double z = x[0] * x[0] - 2 * rho * x[0] * x[1] + x[1] * x[1];
+        return const2 * std::exp(-z / const1);
+    }
+};
+'
+code = '
+Rcpp::List integrate_test2()
+{
+    BiNormal f(0.5);  // rho = 0.5
+    Eigen::VectorXd lower(2);
+    lower << -1, -1;
+    Eigen::VectorXd upper(2);
+    upper << 1, 1;
+    double err_est;
+    int err_code;
+    const double res = integrate(f, lower, upper, err_est, err_code);
+    return Rcpp::List::create(
+        Rcpp::Named("approximate") = res,
+        Rcpp::Named("error_estimate") = err_est,
+        Rcpp::Named("error_code") = err_code
+    );
+}
+'
+cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
+            showOutput = FALSE, verbose = FALSE)
+```
+
+```{r}
 library(mvtnorm)
 trueval = pmvnorm(c(-1, -1), c(1, 1), sigma = matrix(c(1, 0.5, 0.5, 1), 2))
 integrate_test2()
-## $approximate
-## [1] 0.4979718
-##
-## $error_estimate
-## [1] 4.612333e-09
-##
-## $error_code
-## [1] 0
-trueval - integrate_test2()$approximate
-## [1] 2.893336e-11
+as.numeric(trueval) - integrate_test2()$approximate
 ```
 
 ## Numerical Optimization
@@ -358,16 +440,49 @@ Rcpp::List optim_test()
 
 Calling the generated R function `optim_test()` gives
 
-```r
+```{r include=FALSE}
+includes = '
+#include <RcppNumerical.h>
+
+using namespace Numer;
+
+// f = 100 * (x2 - x1^2)^2 + (1 - x1)^2
+// True minimum: x1 = x2 = 1
+class Rosenbrock: public MFuncGrad
+{
+public:
+    double f_grad(Constvec& x, Refvec grad)
+    {
+        double t1 = x[1] - x[0] * x[0];
+        double t2 = 1 - x[0];
+        grad[0] = -400 * x[0] * t1 - 2 * t2;
+        grad[1] = 200 * t1;
+        return 100 * t1 * t1 + t2 * t2;
+    }
+};
+'
+code = '
+Rcpp::List optim_test()
+{
+    Eigen::VectorXd x(2);
+    x[0] = -1.2;
+    x[1] = 1;
+    double fopt;
+    Rosenbrock f;
+    int res = optim_lbfgs(f, x, fopt);
+    return Rcpp::List::create(
+        Rcpp::Named("xopt") = x,
+        Rcpp::Named("fopt") = fopt,
+        Rcpp::Named("status") = res
+    );
+}
+'
+cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
+            showOutput = FALSE, verbose = FALSE)
+```
+
+```{r}
 optim_test()
-## $xopt
-## [1] 1 1
-##
-## $fopt
-## [1] 3.12499e-15
-##
-## $status
-## [1] 0
 ```
 
 ## A More Practical Example
@@ -439,7 +554,69 @@ Rcpp::NumericVector logistic_reg(Rcpp::NumericMatrix x, Rcpp::NumericVector y)
 
 Here is the R code to test the function:
 
-```r
+```{r include=FALSE}
+includes = "
+#include <RcppNumerical.h>
+
+using namespace Numer;
+
+typedef Eigen::Map<Eigen::MatrixXd> MapMat;
+typedef Eigen::Map<Eigen::VectorXd> MapVec;
+
+class LogisticReg: public MFuncGrad
+{
+private:
+    const MapMat X;
+    const MapVec Y;
+public:
+    LogisticReg(const MapMat x_, const MapVec y_) : X(x_), Y(y_) {}
+
+    double f_grad(Constvec& beta, Refvec grad)
+    {
+        // Negative log likelihood
+        //   sum(log(1 + exp(X * beta))) - y' * X * beta
+
+        Eigen::VectorXd xbeta = X * beta;
+        const double yxbeta = Y.dot(xbeta);
+        // X * beta => exp(X * beta)
+        xbeta = xbeta.array().exp();
+        const double f = (xbeta.array() + 1.0).log().sum() - yxbeta;
+
+        // Gradient
+        //   X' * (p - y), p = exp(X * beta) / (1 + exp(X * beta))
+
+        // exp(X * beta) => p
+        xbeta.array() /= (xbeta.array() + 1.0);
+        grad.noalias() = X.transpose() * (xbeta - Y);
+
+        return f;
+    }
+};
+"
+code = '
+Rcpp::NumericVector logistic_reg(Rcpp::NumericMatrix x, Rcpp::NumericVector y)
+{
+    const MapMat xx = Rcpp::as<MapMat>(x);
+    const MapVec yy = Rcpp::as<MapVec>(y);
+    // Negative log likelihood
+    LogisticReg nll(xx, yy);
+    // Initial guess
+    Eigen::VectorXd beta(xx.cols());
+    beta.setZero();
+
+    double fopt;
+    int status = optim_lbfgs(nll, beta, fopt);
+    if(status < 0)
+        Rcpp::stop("fail to converge");
+
+    return Rcpp::wrap(beta);
+}
+'
+cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
+            showOutput = FALSE, verbose = FALSE)
+```
+
+```{r}
 set.seed(123)
 n = 5000
 p = 100
@@ -450,13 +627,8 @@ p = exp(xb) / (1 + exp(xb))
 y = rbinom(n, 1, p)
 
 system.time(res1 <- glm.fit(x, y, family = binomial())$coefficients)
-##   user  system elapsed
-##  0.229   0.006   0.234
 system.time(res2 <- logistic_reg(x, y))
-##   user  system elapsed
-##  0.005   0.000   0.006
 max(abs(res1 - res2))
-## [1] 0.0001873564
 ```
 
 It is much faster than the standard `glm.fit()` function in R! (Although
@@ -465,10 +637,7 @@ It is much faster than the standard `glm.fit()` function in R! (Although
 **RcppNumerical** also provides the `fastLR()` function to run fast logistic
 regression, which is a modified and more stable version of the code above.
 
-```r
+```{r}
 system.time(res3 <- fastLR(x, y)$coefficients)
-##   user  system elapsed
-##  0.007   0.001   0.008
 max(abs(res1 - res3))
-## [1] 7.066969e-06
 ```
