Remove the need for code-duplication

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -100,7 +100,7 @@ larger values have better accuracy, but may involve more function calls.
 See a full example below, which can be compiled using the `Rcpp::sourceCpp`
 function in Rcpp.
 
-```cpp
+```{Rcpp}
 // [[Rcpp::depends(RcppEigen)]]
 // [[Rcpp::depends(RcppNumerical)]]
 #include <RcppNumerical.h>
@@ -143,50 +143,6 @@ Rcpp::List integrate_test()
 ```
 
 Runing the `integrate_test()` function in R gives
-
-```{r include=FALSE}
-includes = '
-#include <RcppNumerical.h>
-using namespace Numer;
-
-// P(0.3 < X < 0.8), X ~ Beta(a, b)
-class BetaPDF: public Func
-{
-private:
-    double a;
-    double b;
-public:
-    BetaPDF(double a_, double b_) : a(a_), b(b_) {}
-
-    double operator()(const double& x) const
-    {
-        return R::dbeta(x, a, b, 0);
-    }
-};
-'
-code = '
-Rcpp::List integrate_test()
-{
-    const double a = 3, b = 10;
-    const double lower = 0.3, upper = 0.8;
-    const double true_val = R::pbeta(upper, a, b, 1, 0) -
-                            R::pbeta(lower, a, b, 1, 0);
-
-    BetaPDF f(a, b);
-    double err_est;
-    int err_code;
-    const double res = integrate(f, lower, upper, err_est, err_code);
-    return Rcpp::List::create(
-        Rcpp::Named("true") = true_val,
-        Rcpp::Named("approximate") = res,
-        Rcpp::Named("error_estimate") = err_est,
-        Rcpp::Named("error_code") = err_code
-    );
-}
-'
-cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
-            showOutput = FALSE, verbose = FALSE)
-```
 
 
 ```{r}
@@ -247,7 +203,7 @@ convergence.
 
 See the example below:
 
-```cpp
+```{Rcpp}
 // [[Rcpp::depends(RcppEigen)]]
 // [[Rcpp::depends(RcppNumerical)]]
 #include <RcppNumerical.h>
@@ -296,56 +252,6 @@ Rcpp::List integrate_test2()
 ```
 
 We can test the result in R:
-
-```{r include=FALSE}
-includes = '
-#include <RcppNumerical.h>
-using namespace Numer;
-
-// P(a1 < X1 < b1, a2 < X2 < b2), (X1, X2) ~ N([0], [1   rho])
-//                                            ([0], [rho   1])
-class BiNormal: public MFunc
-{
-private:
-    const double rho;
-    double const1;  // 2 * (1 - rho^2)
-    double const2;  // 1 / (2 * PI) / sqrt(1 - rho^2)
-public:
-    BiNormal(const double& rho_) : rho(rho_)
-    {
-        const1 = 2.0 * (1.0 - rho * rho);
-        const2 = 1.0 / (2 * M_PI) / std::sqrt(1.0 - rho * rho);
-    }
-
-    // PDF of bivariate normal
-    double operator()(Constvec& x)
-    {
-        double z = x[0] * x[0] - 2 * rho * x[0] * x[1] + x[1] * x[1];
-        return const2 * std::exp(-z / const1);
-    }
-};
-'
-code = '
-Rcpp::List integrate_test2()
-{
-    BiNormal f(0.5);  // rho = 0.5
-    Eigen::VectorXd lower(2);
-    lower << -1, -1;
-    Eigen::VectorXd upper(2);
-    upper << 1, 1;
-    double err_est;
-    int err_code;
-    const double res = integrate(f, lower, upper, err_est, err_code);
-    return Rcpp::List::create(
-        Rcpp::Named("approximate") = res,
-        Rcpp::Named("error_estimate") = err_est,
-        Rcpp::Named("error_code") = err_code
-    );
-}
-'
-cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
-            showOutput = FALSE, verbose = FALSE)
-```
 
 ```{r}
 library(mvtnorm)
@@ -405,7 +311,7 @@ inline int optim_lbfgs(
 Below is an example that illustrates the optimization of the Rosenbrock function
 `f(x1, x2) = 100 * (x2 - x1^2)^2 + (1 - x1)^2`:
 
-```cpp
+```{Rcpp}
 // [[Rcpp::depends(RcppEigen)]]
 // [[Rcpp::depends(RcppNumerical)]]
 
@@ -447,47 +353,6 @@ Rcpp::List optim_test()
 
 Calling the generated R function `optim_test()` gives
 
-```{r include=FALSE}
-includes = '
-#include <RcppNumerical.h>
-
-using namespace Numer;
-
-// f = 100 * (x2 - x1^2)^2 + (1 - x1)^2
-// True minimum: x1 = x2 = 1
-class Rosenbrock: public MFuncGrad
-{
-public:
-    double f_grad(Constvec& x, Refvec grad)
-    {
-        double t1 = x[1] - x[0] * x[0];
-        double t2 = 1 - x[0];
-        grad[0] = -400 * x[0] * t1 - 2 * t2;
-        grad[1] = 200 * t1;
-        return 100 * t1 * t1 + t2 * t2;
-    }
-};
-'
-code = '
-Rcpp::List optim_test()
-{
-    Eigen::VectorXd x(2);
-    x[0] = -1.2;
-    x[1] = 1;
-    double fopt;
-    Rosenbrock f;
-    int res = optim_lbfgs(f, x, fopt);
-    return Rcpp::List::create(
-        Rcpp::Named("xopt") = x,
-        Rcpp::Named("fopt") = fopt,
-        Rcpp::Named("status") = res
-    );
-}
-'
-cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
-            showOutput = FALSE, verbose = FALSE)
-```
-
 ```{r}
 optim_test()
 ```
@@ -498,7 +363,7 @@ It may be more meaningful to look at a real application of the **RcppNumerical**
 package. Below is an example to fit logistic regression using the L-BFGS
 algorithm. It also demonstrates the performance of the library.
 
-```cpp
+```{Rcpp}
 // [[Rcpp::depends(RcppEigen)]]
 // [[Rcpp::depends(RcppNumerical)]]
 
@@ -560,68 +425,6 @@ Rcpp::NumericVector logistic_reg(Rcpp::NumericMatrix x, Rcpp::NumericVector y)
 ```
 
 Here is the R code to test the function:
-
-```{r include=FALSE}
-includes = "
-#include <RcppNumerical.h>
-
-using namespace Numer;
-
-typedef Eigen::Map<Eigen::MatrixXd> MapMat;
-typedef Eigen::Map<Eigen::VectorXd> MapVec;
-
-class LogisticReg: public MFuncGrad
-{
-private:
-    const MapMat X;
-    const MapVec Y;
-public:
-    LogisticReg(const MapMat x_, const MapVec y_) : X(x_), Y(y_) {}
-
-    double f_grad(Constvec& beta, Refvec grad)
-    {
-        // Negative log likelihood
-        //   sum(log(1 + exp(X * beta))) - y' * X * beta
-
-        Eigen::VectorXd xbeta = X * beta;
-        const double yxbeta = Y.dot(xbeta);
-        // X * beta => exp(X * beta)
-        xbeta = xbeta.array().exp();
-        const double f = (xbeta.array() + 1.0).log().sum() - yxbeta;
-
-        // Gradient
-        //   X' * (p - y), p = exp(X * beta) / (1 + exp(X * beta))
-
-        // exp(X * beta) => p
-        xbeta.array() /= (xbeta.array() + 1.0);
-        grad.noalias() = X.transpose() * (xbeta - Y);
-
-        return f;
-    }
-};
-"
-code = '
-Rcpp::NumericVector logistic_reg(Rcpp::NumericMatrix x, Rcpp::NumericVector y)
-{
-    const MapMat xx = Rcpp::as<MapMat>(x);
-    const MapVec yy = Rcpp::as<MapVec>(y);
-    // Negative log likelihood
-    LogisticReg nll(xx, yy);
-    // Initial guess
-    Eigen::VectorXd beta(xx.cols());
-    beta.setZero();
-
-    double fopt;
-    int status = optim_lbfgs(nll, beta, fopt);
-    if(status < 0)
-        Rcpp::stop("fail to converge");
-
-    return Rcpp::wrap(beta);
-}
-'
-cppFunction(code, depends = c("RcppEigen", "RcppNumerical"), includes = includes,
-            showOutput = FALSE, verbose = FALSE)
-```
 
 ```{r}
 set.seed(123)
