--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -122,9 +122,10 @@ public:
 };
 
 // [[Rcpp::export]]
-Rcpp::List integrate_test(const double& lower, const double& upper)
+Rcpp::List integrate_test()
 {
     const double a = 3, b = 10;
+    const double lower = 0.3, upper = 0.8;
     const double true_val = R::pbeta(upper, a, b, 1, 0) -
                             R::pbeta(lower, a, b, 1, 0);
 
@@ -141,17 +142,47 @@ Rcpp::List integrate_test(const double& lower, const double& upper)
 }
 ```
 
-Runing the `integrate_test()` function for some finite interval in R gives
-
+Runing the `integrate_test()` function in R gives
 
 ```{r}
-integrate_test(0.3, 0.8)
+integrate_test()
 ```
 
-Note that infinite intervals are also possible in the case of one-dimensional integration
+Note that infinite intervals are also possible in the case of one-dimensional integration:
+
+```{Rcpp}
+// [[Rcpp::depends(RcppEigen)]]
+// [[Rcpp::depends(RcppNumerical)]]
+#include <RcppNumerical.h>
+using namespace Numer;
+
+class TestInf: public Func
+{
+public:
+    double operator()(const double& x) const
+    {
+        return x * x * R::dnorm(x, 0.0, 1.0, 0);
+    }
+};
+
+// [[Rcpp::export]]
+Rcpp::List integrate_test2(const double& lower, const double& upper)
+{
+    TestInf f;
+    double err_est;
+    int err_code;
+    const double res = integrate(f, lower, upper, err_est, err_code);
+    return Rcpp::List::create(
+        Rcpp::Named("approximate") = res,
+        Rcpp::Named("error_estimate") = err_est,
+        Rcpp::Named("error_code") = err_code
+    );
+}
+```
 
 ```{r}
-integrate_test(0.1, Inf)
+integrate(function(x) x^2 * dnorm(x), 0.5, Inf)  # integrate() in R
+integrate_test2(0.5, Inf)
 ```
 
 ### Multi-dimensional
