--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -176,7 +176,7 @@ using Constvec = const Eigen::Ref<const Eigen::VectorXd>;
 
 (Basically you can treat `Constvec` as a `const Eigen::VectorXd`. Using
 `Eigen::Ref` is mainly to avoid memory copy. See the explanation
-[here](https://eigen.tuxfamily.org/dox/classEigen_1_1Ref.html).)
+[here](https://libeigen.gitlab.io/eigen/docs-nightly/classEigen_1_1Ref.html).)
 
 The function provided by **RcppNumerical** for multi-dimensional
 integration is
